--- a/Main.css
+++ b/Main.css
@@ -8,19 +8,29 @@ body{
 
 .heading{
     font-size: 15px;
-    text-align: center;
     position: relative;
     top: -3px;
     bottom: 3px;
-    background-color: rgb(255, 255, 255);
 }
+
+p#heading{
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    display: inline-flex;
+    font-size: 20px;
+    position: relative;
+    left:-6.5rem;
+    margin:0px;
+}
+
 
 #MSTLogo{
     position: relative;
+    width:120px;
     top:1rem;
 }
 
 #MST{ 
+    font-size: 50px;
     color: rgb(45, 0, 74);
     display: inline-block;
     position: relative;
@@ -30,41 +40,37 @@ body{
 nav.menu a#students{
     border: solid rgb(255, 255, 255);
     padding-top: 5px;
+    margin-top: 0px;
     border-radius: 20px;
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
     background-color: rgb(255, 255, 255);
 
 }
 
 
 nav.menu a{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: rgb(45, 0, 74);
     text-decoration: none;
     display: inline-block;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     position: relative;
-    top:-10px;
+    top:-80px;
+    left: 300px;
+    margin:50px;
     padding: 10px;
     padding-top: 5px;
     margin-top: 0px;
-    margin-right: 100px;
-    margin-left: 150px;
 }
 
 nav.menu a:hover{
     padding-top: 1px;
     border-radius: 20px;
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
     background-color: rgba(26, 0, 97, 0.251);
     backdrop-filter:blur(2px);
 }
 
 nav.menu a:active{
     border-radius: 20px;
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
     background-color: rgba(255, 255, 255, 0.29);
     backdrop-filter:blur(2px);
 }
