--- a/teachers.css
+++ b/teachers.css
@@ -44,12 +44,11 @@ nav.menu a#Tr{
 
 }
 
-nav.menu a{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+nav.menu a{font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgb(45, 0, 74);
     text-decoration: none;
     display: inline-block;
-    font-size: 1.2rem;
+    font-size: 1rem;
     position: relative;
     top:-80px;
     left: 300px;
